--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,33 @@
 
 }
 
+.side {
+    width: 100px;
+    height: 100px;
+    /* filter: blur(1px); */
+    filter: opacity(0.7)
+}
+
+.rightSide {
+padding-left: 20px;
+}
+
+.leftSide {
+padding-right: 20px;
+
+}
+
+/* .img-right {
+    width: 100px;
+    height: 100px;
+} */
+
 .main {
     width: 200px;
     height: 200px;
 }
 
 .arrow {
-    
     border: solid black;
     border-width: 0 3px 3px 0;
     display: inline-block;
